[project]
name = "tahmo"
version = "0.1.0"
description = "TAHMO API"
authors = [
    { name = "Genevieve Flaspohler", email = "geflaspohler@gmail.com" }
]
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["TAHMO"]
